Fixed background wrapping issue

--- a/WebContent/css/customCSS.css
+++ b/WebContent/css/customCSS.css
@@ -16,11 +16,14 @@ border-radius: 50%;
     color: white;
 }
 
+body {
+  background-image: url("../img/pseal.jpg");
+  background-position: center;
+}
+
 header {
   display: block;
   text-align: center;
-  background-image: url("../img/pseal.jpg");
-  background-position: center;
 
 
 }
